--- a/TRABALHOWEB/src/registration.html
+++ b/TRABALHOWEB/src/registration.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -33,17 +33,17 @@
       <h1 class="login-h1">Cadastro</h1>
       <p class="login-p">Digite suas informações para cadastrar sua conta</p>
 
-      <form>
+      <form id="registration-form" novalidate>
         <div class="form-group">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">
-                <i class="bi bi-person"></i>
+                <i class="bi bi-person icon"></i>
               </span>
               <input
                 type="email"
                 class="form-control"
-                id="exampleInputEmail1"
+                id="input-email"
                 aria-describedby="emailHelp"
                 placeholder="Email"
               />
@@ -55,27 +55,28 @@
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">
-                <i class="bi bi-lock"></i>
+                <i class="bi bi-lock icon"></i>
               </span>
               <input
                 type="password"
                 class="form-control"
-                id="exampleInputPassword1"
+                id="input-password"
                 placeholder="Senha"
               />
             </div>
           </div>
         </div>
+        
         <div class="form-group">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">
-                <i class="bi bi-lock"></i>
+                <i class="bi bi-lock icon"></i>
               </span>
               <input
                 type="password"
                 class="form-control"
-                id="exampleInputPassword1"
+                id="exampleInputPassword2"
                 placeholder="Confirme a senha"
               />
             </div>
@@ -86,6 +87,6 @@
       </form>
     </div>
 
-    <script src="main.js"></script>
+    <script src="validatingRegistrationForm.js"></script>
   </body>
 </html>
