--- a/TRABALHOWEB/src/registration.html
+++ b/TRABALHOWEB/src/registration.html
@@ -27,6 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div class="input-container">
@@ -46,6 +47,7 @@
                 id="input-email"
                 aria-describedby="emailHelp"
                 placeholder="Email"
+                required
               />
             </div>
           </div>
@@ -62,6 +64,7 @@
                 class="form-control"
                 id="input-password"
                 placeholder="Senha"
+                required
               />
             </div>
           </div>
@@ -76,8 +79,9 @@
               <input
                 type="password"
                 class="form-control"
-                id="exampleInputPassword2"
+                id="input-confirm-password"
                 placeholder="Confirme a senha"
+                required
               />
             </div>
           </div>
